Bug 1077211 - Fix grammar problem in HTML parser error message. r=flod,alchen

Differential Revision: https://phabricator.services.mozilla.com/D81995